Fixing errors blurring the panel behind it

--- a/staticfiles/scss/home.scss
+++ b/staticfiles/scss/home.scss
@@ -231,7 +231,7 @@ p, label, a {
 
 // Errors
 
-#register-snackbar, #login-snackbar {
+.snackbar {
     visibility: visible;
     min-width: 250px;
     background-color: #ff4d4d;
